[package]
name = "gkg-server"
version.workspace = true
edition = "2024"
license = "MIT"

[[bin]]
name = "gkg-server"
path = "src/main.rs"

[features]
default = []
regenerate-protos = []

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
clickhouse-client = { path = "../clickhouse-client" }
health-check = { path = "../health-check" }
indexer = { path = "../indexer" }
ontology = { path = "../ontology" }
prost = { workspace = true }
prost-types = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
parking_lot = { workspace = true }
query-engine = { path = "../query-engine" }
jsonwebtoken = { workspace = true }
labkit-rs = { path = "../labkit-rs", features = ["http", "grpc", "metrics-axum", "metrics-grpc"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util.workspace = true
tokio-stream = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
arrow-ipc = { workspace = true }
clickhouse = { workspace = true }
futures = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
toon-format = { version = "0.4.1", default-features = false }
rustc-hash = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
prost-build = { workspace = true }

[dev-dependencies]
async-nats = { workspace = true }
tokio = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
serial_test = { workspace = true }
indexer = { path = "../indexer", features = ["testkit"] }
query-engine = { path = "../query-engine" }
regex = { workspace = true }
parser-core = { workspace = true }
internment = { workspace = true }
smallvec = { workspace = true }

[lints]
workspace = true
