[package]
name = "gkg-server"
version.workspace = true
edition = "2024"
license = "MIT"

[[bin]]
name = "gkg-server"
path = "src/main.rs"

[features]
default = []
regenerate-protos = []
testkit = ["clickhouse-client/testkit"]

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
clickhouse-client = { path = "../clickhouse-client" }
gkg-utils = { path = "../utils" }
health-check = { path = "../health-check" }
indexmap = { workspace = true }
indexer = { path = "../indexer" }
ontology = { path = "../ontology" }
opentelemetry = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
parking_lot = { workspace = true }
query-engine = { path = "../query-engine" }
querying-types = { path = "../querying-types" }
querying-pipeline = { path = "../querying-pipeline" }
gitlab-client = { workspace = true }
jsonwebtoken = { workspace = true }
labkit-rs = { path = "../labkit-rs", features = ["http", "grpc", "metrics-axum", "metrics-grpc"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util.workspace = true
tokio-stream = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
arrow-ipc = { workspace = true }
clickhouse = { workspace = true }
futures = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
toon-format = { version = "0.4.1", default-features = false }
rustc-hash = { workspace = true }
enum-as-inner = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
prost-build = { workspace = true }

[dev-dependencies]
jsonschema = { workspace = true }
query-engine = { path = "../query-engine" }
tempfile = { workspace = true }
tokio = { workspace = true }

[lints.rust]
# workspace uses `forbid`, downgraded to `deny` so tests can manipulate env vars
unsafe_code = "deny"
