[package]
name = "gkg-server"
version.workspace = true
edition = "2024"
license = "MIT"

[[bin]]
name = "gkg-server"
path = "src/main.rs"

[features]
default = []
regenerate-protos = []
testkit = ["clickhouse-client/testkit"]

[dependencies]
mimalloc = { workspace = true, features = ["secure"] }
anyhow = { workspace = true }
arrow = { workspace = true }
base64 = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
clickhouse-client = { path = "../clickhouse-client" }
gkg-billing = { path = "../gkg-billing" }
gkg-observability = { workspace = true }
gkg-server-config = { path = "../gkg-server-config" }
gkg-utils = { path = "../utils" }
health-check = { path = "../health-check" }
indexer = { path = "../indexer" }
nats-client = { workspace = true }
ontology = { path = "../ontology" }
opentelemetry = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
query-engine = { path = "../query-engine" }
gitlab-client = { workspace = true }
jsonwebtoken = { workspace = true }
labkit = { workspace = true, features = ["http", "grpc", "otel", "prometheus"] }
labkit-events = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util.workspace = true
tokio-stream = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
toon-format = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
prost-build = { workspace = true }

[dev-dependencies]
jsonschema = { workspace = true }
tokio = { workspace = true }

[lints.rust]
# workspace uses `forbid`, downgraded to `deny` so tests can manipulate env vars
unsafe_code = "deny"
