[package]
name = "health-check"
version.workspace = true
edition = "2024"
license = "LicenseRef-EE"

[dependencies]
axum = { workspace = true }
clickhouse-client = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
