[package]
name = "integration-testkit"
version.workspace = true
edition = "2024"

[dependencies]
arrow = { workspace = true }
clickhouse-client = { path = "../clickhouse-client" }
gkg-server-config = { path = "../gkg-server-config" }
gitalisk-core = { workspace = true }
gkg-utils = { path = "../utils" }
futures = { workspace = true }
gkg-server = { path = "../gkg-server" }
query-engine = { path = "../query-engine" }
rustls = { workspace = true }
sqlparser = { workspace = true }
serde_json = { workspace = true }
testcontainers = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

# Call graph validator
code-graph = { path = "../code-graph" }
code-graph-linker = { path = "../code-graph/linker" }
code-graph-types = { path = "../code-graph/types" }
parser-core = { workspace = true }
lance-graph = { workspace = true }
# lance-graph uses arrow 56 — we need matching types for its API
arrow_56 = { package = "arrow", version = "56" }
globset = { workspace = true }
petgraph = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
tempfile = { workspace = true }
