[package]
name = "integration-testkit"
version.workspace = true
edition = "2024"

[dependencies]
arrow = { workspace = true }
async-trait = { workspace = true }
clickhouse-client = { path = "../clickhouse-client" }
gkg-server-config = { path = "../gkg-server-config" }
gitalisk-core = { workspace = true }
gkg-utils = { path = "../utils" }
futures = { workspace = true }
gkg-server = { path = "../gkg-server" }
ontology = { path = "../ontology" }
query-engine = { path = "../query-engine", features = ["testutils"] }
rustls = { workspace = true }
sqlparser = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
testcontainers = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
