[package]
name = "integration-tests-codegraph"
version.workspace = true
edition = "2024"
publish = false

[dependencies]
code-graph = { path = "../code-graph" }

# lance-graph uses arrow 56 — we need matching types for its API
lance-graph = { workspace = true }
arrow_56 = { workspace = true }

# arrow 58 for reading PipelineOutput::Batches via IPC bridge
arrow = { workspace = true }
arrow-ipc = { workspace = true }

crossbeam-channel = "0.5"
globset = { workspace = true }
rayon = { workspace = true }
petgraph = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tabled = { workspace = true }
anyhow = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
