[package]
name = "integration-tests"
version.workspace = true
edition = "2024"
publish = false
autotests = false

# No src/lib.rs — this crate only contains integration tests.
# Test targets are defined explicitly below; autotests = false
# prevents cargo from auto-discovering files like common.rs.

[[test]]
name = "docker"
path = "tests/entrypoints/docker.rs"

[[test]]
name = "compiler"
path = "tests/entrypoints/compiler.rs"

[[test]]
name = "querying-pipeline"
path = "tests/entrypoints/querying_pipeline.rs"

[dev-dependencies]
clickhouse-client = { path = "../clickhouse-client" }
compiler = { path = "../query-engine/compiler" }
gkg-server = { path = "../gkg-server", features = ["testkit"] }
gkg-utils = { path = "../utils" }
jsonschema = { workspace = true }
indexer = { path = "../indexer", features = ["testkit"] }
integration-testkit = { path = "../integration-testkit" }
ontology = { path = "../ontology" }
query-engine = { path = "../query-engine" }
arrow = { workspace = true }
async-nats = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
gitlab-client = { workspace = true }
parking_lot = { workspace = true }
prost = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
health-check = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
siphon-proto = { path = "../siphon-proto" }
tar = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
tempfile = { workspace = true }
labkit = { workspace = true, features = ["http"] }
opentelemetry = { workspace = true }
opentelemetry_sdk = { version = "0.31", features = ["metrics", "rt-tokio", "testing"] }
zstd = "0.13.3"
sqlparser.workspace = true
