[package]
name = "integration-tests"
version.workspace = true
edition = "2024"
publish = false

# No src/lib.rs — this crate only contains integration tests.
# Test targets are auto-discovered from tests/*.rs files.
# Shared helpers live in tests/common/ (subdirectory, ignored by auto-discovery).

[dev-dependencies]
clickhouse-client = { path = "../clickhouse-client" }
compiler = { path = "../query-engine/compiler" }
gkg-analytics = { path = "../gkg-analytics" }
gkg-server = { path = "../gkg-server", features = ["testkit"] }
gkg-server-config = { path = "../gkg-server-config" }
gkg-utils = { path = "../utils" }
jsonschema = { workspace = true }
indexer = { path = "../indexer", features = ["testkit"] }
nats-client = { workspace = true, features = ["testkit"] }
integration-testkit = { path = "../integration-testkit" }
migration-framework = { path = "../migration-framework" }
ontology = { path = "../ontology" }
query-engine = { path = "../query-engine" }
arrow = { workspace = true }
async-nats = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
gitaly-protos = { path = "../gitaly-protos" }
gitlab-client = { workspace = true }
parking_lot = { workspace = true }
prost = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
regex = { workspace = true }
tar = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
tempfile = { workspace = true }
cargo_metadata = { workspace = true }
reqwest = { workspace = true }
labkit = { workspace = true, features = ["http"] }
labkit-events = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { version = "0.32", features = ["metrics", "rt-tokio", "testing"] }
sqlparser.workspace = true
uuid = { workspace = true }
