[package]
name = "labkit-rs"
version = "0.1.0"
edition = "2024"
description = "Observability utilities for Rust services"

[features]
default = []
http = ["dep:tower", "dep:tower-http", "dep:http", "dep:http-body", "dep:pin-project-lite"]
grpc = ["dep:tonic", "dep:futures-core", "dep:pin-project-lite"]
full = ["http", "grpc"]

[dependencies]
# Core dependencies (always included)
ulid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json", "env-filter", "fmt"] }
chrono = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

# HTTP feature dependencies
tower = { workspace = true, optional = true }
tower-http = { workspace = true, features = ["request-id", "propagate-header"], optional = true }
http = { version = "1.4.0", optional = true }
http-body = { version = "1.0.1", optional = true }
pin-project-lite = { version = "0.2.16", optional = true }

# gRPC feature dependencies
tonic = { workspace = true, optional = true }
futures-core = { version = "0.3.31", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-stream = { workspace = true }
tower = { workspace = true }
http = "1.4.0"

[lints]
workspace = true
