[package]
name = "labkit-rs"
version = "0.1.0"
edition = "2024"
description = "Observability utilities for Rust services"

[features]
default = []
http = ["dep:tower", "dep:http", "dep:futures-util"]
grpc = ["dep:tonic", "dep:futures-core"]
full = ["http", "grpc"]

[dependencies]
# Core dependencies (always included)
ulid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json", "env-filter", "fmt"] }
chrono = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
opentelemetry = { version = "0.30", default-features = false, features = ["trace"] }

# HTTP feature dependencies
tower = { workspace = true, optional = true }
http = { version = "1.4.0", optional = true }
futures-util = { version = "0.3.31", optional = true }

# gRPC feature dependencies
tonic = { workspace = true, optional = true }
futures-core = { version = "0.3.31", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-stream = { workspace = true }
tower = { workspace = true }
http = "1.4.0"

[lints]
workspace = true
