[package]
name = "llqm"
version.workspace = true
edition = "2024"
license = "LicenseRef-EE"

[dependencies]
substrait = "0.62"
prost-types = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ontology = { path = "../ontology" }

[[test]]
name = "prototype_lowering"
path = "test/prototype_lowering.rs"

[[test]]
name = "pass_tests"
path = "test/pass_tests.rs"

[[test]]
name = "indexer_pipeline"
path = "test/indexer_pipeline.rs"

[lints]
workspace = true
