[package]
name = "named-queries"
version.workspace = true
edition = "2024"
license = "MIT"

[dependencies]
jsonschema = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
